--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
 <html>
     <body>
-        <h1></h1>
-        <script>
-            function checkUser(utente){
-                var utenti = ["50-46-5D-90-6B-EC"];
-            var hasBought = false;
-
-            for(var i = 0; i < utenti.length; i++){
-                if(utenti[i] == utente){
-                    hasBought = true;
-                }
-            }
-            return hasBought;
-            } 
-        </script>
+        <a href="users.txt">Clicca qui</a>
     </body>
 </html>
