--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@
             </p>
                 <img src="twitterscreen.PNG" class="immagine">
                 <div class="social-container">
-                    <a href="https://www.instagram.com/zsharpfire_/" target="_blank"><img src="icons/Instagram.png" class="icon" href=""></a>
-                    <a href="https://twitter.com/zSharpFire" target="_blank"><img src="icons/Twitter.png" class="icon" href=""></a>
-                    <a href="https://t.me/+N8j9XOqCbpczNjdk" target="_blank"><img src="icons/Telegram.png" class="icon" href=""></a>
-                    <a href="https://www.youtube.com/channel/UC_grMEIMbYmKBLNMb9Bt_tw/featured" target="_blank"><img src="icons/Youtube.png" class="icon" href=""></a>
-                    <a href="" target="_blank"><img src="icons/LinkedIn.png" class="icon" href=""></a>
+                    <a href="https://www.instagram.com/zsharpfire_/" target="_blank"><img src="Instagram.png" class="icon" href=""></a>
+                    <a href="https://twitter.com/zSharpFire" target="_blank"><img src="Twitter.png" class="icon" href=""></a>
+                    <a href="https://t.me/+N8j9XOqCbpczNjdk" target="_blank"><img src="Telegram.png" class="icon" href=""></a>
+                    <a href="https://www.youtube.com/channel/UC_grMEIMbYmKBLNMb9Bt_tw/featured" target="_blank"><img src=Youtube.png" class="icon" href=""></a>
+                    <a href="" target="_blank"><img src="LinkedIn.png" class="icon" href=""></a>
                 </div>
             </div>
             <div id="pricing"></div>
