--- a/index.html
+++ b/index.html
@@ -418,5 +418,12 @@
                 loop: true
             })
         </script>
+         <script type="text/javascript">
+            <!--
+            if (screen.width <= 699) {
+               document.location = "mobile.html";
+            }
+            //-->
+         </script>
     </body>
 </html>
