--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <script type="text/javascript">
            <!--
            if (screen.width <= 699) {
-              document.location = "mobile.html";
+              document.location = "phone.html";
            }
            //-->
         </script>
